--- a/css/main.css
+++ b/css/main.css
@@ -1,150 +1,56 @@
-/* Adjust font sizes for devices; see here for more Bootstrap values:
-https://stackoverflow.com/questions/48572331/how-to-create-responsive-text-in-bootstrap-4 */
-
-html { 
-    font-size: 1rem;
-    min-width: 425px;
- }
-
-@media (max-width: 992px) {
-    html { font-size: 0.75rem;}
-}
-
-/* Overwrite the font size of the buttons between these breakpoints */
-@media (min-width: 576px) and (max-width: 815px) {
-    .measures_button { font-size: 0.75rem !important; }
-    .dropbtn { font-size: 0.75rem !important;}
-}
-
-/* Overwrite the resizing order of the dropdown button between these breakpoints */
-@media (min-width: 768px) and (max-width: 1350px) {
-    .dropdown { order: 2;}
-}
-
-@media (max-width: 574px) {
-    .dropdown { order: 2;}
-}
-
-/*
-#map_chart CSS is essential for the SVG to resize correctly and for the parent DIV to match its child's
-height and width. Also, see the how SVG is created in the actual JS script.
-*/
-
+/* GLOBAL TAGS */
 body { 
-    font-family: Verdana, Geneva, Tahoma, sans-serif;}
-
-#map_chart {
-    display: inline-block;
-    position: relative;
-    width: 100%;
-    padding-top: 1%;
-    padding-bottom: 1%;
-    vertical-align: top;
-    overflow: hidden;
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
 }
 
-#bar_chart {
-    display: inline-block;
-    position: relative;
-    width: 100%;
-    padding-bottom: 0%;
-    vertical-align: top;
-    overflow: hidden;
+main {
+    min-width: 480px;
+    max-width: 1000px;
+    margin-left: auto;
+    margin-right: auto;
 }
 
-#scatter_chart {
-    display: inline-block;
-    position: relative;
-    padding-bottom: 0%;
-    padding-top: 0%;
-    width: 100%;
-    vertical-align: top;
-    overflow: hidden;
-}
-
-.svg-content {
-    display: inline-block;
-    position: relative;
-    top: 0;
-    left: 0;
-}
-
-#map_chart path {
-    stroke:rgb(12, 1, 44);
-    stroke-width: 0.5px;
+/* TITLES AND FORMATTING CLASSES */
+.title {
+    font-size: 24px;
+  }
+  
+.subtitle {
+    font-size: 16px;
+    font-style: italic;
   }
 
-#source_label { 
+.text-centered {
+    text-align: center;
+  }
 
-    font-size: 10px;
-}
-  
-.x_axis {
-
-    font-size: 14px;
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-}
-
-.y_axis {
-
-    font-size: 14px;
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-}
-
-#map_tooltip {
-
-    position: absolute;
-    width: 200px;
-    height: auto;
-    padding: 10px;
-    background-color: white;
-    box-shadow: 4px 4px 10px rgba(0,0,0,0.4);
-    z-index: 1;
-    pointer-events: none;
-}
-
-#map_tooltip.hidden {
-
-    display: none;
-}
-
-#map_tooltip p {
-
-    margin: 0;
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+.section-title {
     font-size: 16px;
-    line-height: 20px;
 }
 
-#scatter_tooltip {
+/* CONTROLS SECTION */
+.controls {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    flex-wrap: wrap;
 
-    position: absolute;
-    width: 200px;
-    height: auto;
-    padding: 10px;
-    background-color: white;
-    box-shadow: 4px 4px 10px rgba(0,0,0,0.4);
-    z-index: 1;
-    pointer-events: none;
 }
 
-#scatter_tooltip.hidden {
-
-    display: none;
+.controls .dropdown {
+    order: 2;
+    margin: auto;
 }
 
-#scatter_tooltip p {
-
-    margin: 0;
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-    font-size: 16px;
-    line-height: 20px;
+.controls .button-group {
+    margin: auto;
 }
 
 
 /* DROPDOWN */
 .dropbtn {
-    margin: 1px 1px;
+    margin: 1px;
     padding: 10px 20px;
     text-align: center;
     background-color: dimgray;
@@ -195,7 +101,106 @@ body {
 }
 
 .active {
-
     background-color: dimgray;
     color: white;
+}
+
+/* CHART-RELATED CSS */
+.chart {
+    position: relative;
+    width: 100%;
+    height: auto;
+}
+
+#map_chart path {
+    stroke:rgb(12, 1, 44);
+    stroke-width: 0.5px;
+  }
+
+#source_label { 
+    font-size: 10px;
+}
+  
+.x_axis {
+    font-size: 14px;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+}
+
+.y_axis {
+    font-size: 14px;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+}
+
+#map_tooltip {
+    position: absolute;
+    top: 10px;
+    left: 10px;
+    width: 200px;
+    height: auto;
+    padding: 10px;
+    background-color: white;
+    box-shadow: 4px 4px 10px rgba(0,0,0,0.4);
+    z-index: 1;
+    pointer-events: none;
+}
+
+#map_tooltip.hidden {
+    display: none;
+}
+
+#map_tooltip p {
+    margin: 0;
+    font-size: 16px;
+    line-height: 20px;
+}
+
+/* top and left are set in d3_scatter.js */
+#scatter_tooltip {
+    position: fixed;
+    width: 200px;
+    height: auto;
+    padding: 10px;
+    background-color: white;
+    box-shadow: 4px 4px 10px rgba(0,0,0,0.4);
+    z-index: 1;
+    pointer-events: none;
+}
+
+#scatter_tooltip.hidden {
+    display: none;
+}
+
+#scatter_tooltip p {
+    margin: 0;
+    font-size: 16px;
+    line-height: 20px;
+}
+
+@media (min-width: 768px) {
+    .controls {
+        flex-direction: row;
+    }
+
+    .controls .button-group {
+        margin: 1px;
+    }
+
+    .controls .dropdown {
+        order: 0;
+        margin-right: auto;
+        margin-left: 1px;
+    }
+}
+
+/* Large tablets & desktops */
+@media (min-width: 990px) {
+    .section-wrapper {
+        height: 900px;
+        display: flex;
+        flex-direction: column;
+        flex-wrap: wrap;
+    }
+    .section-wrapper section {
+            width: 50%;
+        }
 }
